deb: change to dpkg-buildpackage